# master-brick

./: .gitignore  README.rst
hardware/: bricklets.sch  master.brd  master.kicad_pcb  master.pro  master.sch  master_3dfork.kicad_pcb  powersupply.sch  stack.sch
hardware/V2.1/: bricklets.sch  master.pro  master.sch  powersupply.sch  stack.sch
hardware/V2.2/: bricklets.sch  master.kicad_pcb  master.pro  master.sch  powersupply.sch  stack.sch
hardware/V2.2a/: bricklets.sch  master.kicad_pcb  master.pro  master.sch  powersupply.sch  stack.sch
hardware/V2.2b/: bricklets.sch  master.kicad_pcb  master.sch  powersupply.sch  stack.sch
hardware/V3/: bricklets.sch  master.kicad_pcb  master.pro  master.sch  powersupply.sch  stack.sch
hardware/V3.2/: bricklets.sch  master.kicad_pcb  master.sch  powersupply.sch  stack.sch
software/: CMakeLists.txt  Makefile  changelog  generate_makefile  generate_makefile.bat
software/bindings/c/: brick_master.c  brick_master.h
software/bindings/csharp/: BrickMaster.cs
software/bindings/java/: ExampleStackStatus.java
software/bindings/java/com/tinkerforge/: BrickMaster.java
software/bindings/python/: example_stack_status.py
software/examples/c/: example_stack_status.c
software/examples/csharp/: ExampleStackStatus.cs
software/examples/delphi/: ExampleStackStatus.pas
software/examples/go/: example_stack_status.go
software/examples/java/: ExampleStackStatus.java
software/examples/javascript/: ExampleStackStatus.html  ExampleStackStatus.js
software/examples/labview/: Example Stack Status.vi
software/examples/labview/10.0/: Example Stack Status.vi
software/examples/mathematica/: ExampleStackStatus.nb  ExampleStackStatus.nb.txt
software/examples/matlab/: matlab_example_stack_status.m  octave_example_stack_status.m
software/examples/mqtt/: example-stack-status.txt
software/examples/perl/: example_stack_status.pl
software/examples/php/: ExampleStackStatus.php
software/examples/python/: example_stack_status.py
software/examples/ruby/: example_stack_status.rb
software/examples/rust/: example_stack_status.rs
software/examples/shell/: example-stack-status.sh
software/examples/vbnet/: ExampleStackStatus.vb
software/src/: communication.c  communication.h  config.h  main.c  master.c  master.h  routing.c  routing.h  routing_dma.c  routing_dma.h
software/src/extensions/: brickd.c  brickd.h  extension_config.h  extension_i2c.c  extension_i2c.h  extension_init.c  extension_init.h  websocket.c  websocket.h
software/src/extensions/chibi/: chibi.c  chibi.h  chibi_config.h  chibi_init.c  chibi_init.h  chibi_low_level.c  chibi_low_level.h  chibi_master.c  chibi_master.h  chibi_slave.c  chibi_slave.h
software/src/extensions/ethernet/: ethernet.c  ethernet.h  ethernet_config.h  ethernet_dhcp.c  ethernet_dhcp.h  ethernet_low_level.c  ethernet_low_level.h  ethernet_w5200.c  ethernet_w5200.h  ethernet_w5500.c  ethernet_w5500.h  ethernet_websocket.c  ethernet_websocket.h
software/src/extensions/rs485/: rs485.c  rs485.h  rs485_config.h  rs485_low_level.c  rs485_low_level.h  rs485_master.c  rs485_master.h  rs485_slave.c  rs485_slave.h
software/src/extensions/wifi/: wifi.c  wifi.h  wifi_brickd.c  wifi_brickd.h  wifi_command.c  wifi_command.h  wifi_config.h  wifi_data.c  wifi_data.h  wifi_low_level.c  wifi_low_level.h  wifi_ringbuffer.c  wifi_ringbuffer.h
software/src/extensions/wifi2/: wifi2.c  wifi2.h  wifi2_bootloader.c  wifi2_bootloader.h  wifi2_config.h  wifi2_protocol.txt  wifi2_uart.c  wifi2_uart.h
